--- a/Writeup/ECON293_Final_Project.Rmd
+++ b/Writeup/ECON293_Final_Project.Rmd
@@ -23,7 +23,7 @@ rm(list = ls())
 
 ## Libraries and Packages
 library(causalTree)
-library(optrdd)
+#library(optrdd)
 library(quadprog)
 list.of.packages <- c("tidyverse","dplyr","fastDummies","gtsummary","labelled","lmtest","sandwich","grf","glmnet","sandwich","splines","ggplot2","ggpubr","data.table","qwraps2","rpart","MASS","pracma","haven","estimatr","Matrix","magrittr")
 new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
@@ -101,7 +101,8 @@ write.csv(tips2009_1218_regroup,paste0(In_Data,"fare_1218_recoded_final.csv"))
 ```{r}
 # Step 1: Import the data -----
 tips2009_1218 <- read.csv(paste0(In_Data,"fare_1218_recoded_final.csv"))
-# Create subsets
+## Create subsets for robustness check
+## We use 14-16 range for the main analysis
 reduced=1
 if (reduced == 1){
   data = subset(tips2009_1218, fare>=14 & fare<=16)
@@ -114,25 +115,25 @@ if (reduced == 0){
 
 # Step 2: Set up variables -----
 n <- nrow(data)
-# Treatment: Whether the fare amount is above or below 15 dollars
+## Treatment: Whether the fare amount is above or below 15 dollars
 treatment <- "dsc_15"
-# Outcome: Whether someone tips 0. 1 for yes, 0 for no.
+## Outcome: Whether someone tips 0. 1 for yes, 0 for no.
 outcome <- "tip_zero"
 running = "fare"
-# Additional covariates
+## Additional control covariates
 covariates <- c("weekend", "pickup_time_group", "gr_inc10_All", "Manhattan_pkp", "Brooklyn_pkp", "Queens_pkp", "Bronx_pkp", "Staten_pkp", "Other_pkp", "Manhattan_drf", "Brooklyn_drf", "Queens_drf", "Bronx_drf", "Staten_drf", "Other_drf")
 
 # Step 3: Split the data into training and testing -----
 split1<- sample(c(rep(0, 0.7 * nrow(data)), rep(1, 0.3 * nrow(data))))
 data.train <- data[split1 == 0,]
 data.test <- data[split1 == 1,]
-# Training code
+## Training code
 W_train <- data.train[,treatment]
 Y_train <- data.train[,outcome]
 X_train <- data.train[,covariates]
 Z1_train = (data.train[,running]-15)*W_train
 Z0_train = (data.train[,running]-15)*(1-W_train)
-# Test code
+## Test code
 W_test <- data.test[,treatment]
 Y_test <- data.test[,outcome]
 X_test <- data.test[,covariates]
@@ -143,7 +144,7 @@ Z0_test = (data.test[,running]-15)*(1-W_test)
 ### Causal Forest
 
 ```{r}
-# Implement causal forest in grf
+## Implement causal forest in grf
 cf.priority = causal_forest(X_train, Y_train, W_train, num.trees = 100)
 priority.cate <- predict(cf.priority, X_test)$predictions
 
@@ -156,7 +157,7 @@ cf.ATE.SD <- sd(priority.cate)
 ATE_stats <- c(cf.ATE.mean,cf.ATE.SD)
 write.csv(ATE_stats,paste0(Output, "Causal_Forest_sumstats.csv"),row.names=F)
 
-# Show the CATE distribution 
+## Show the CATE distribution 
 png(file=paste0(Output, "Causal_Forest_CATE.png"), width=595, height=368)
 hist(priority.cate, main = "", xlab = "CATE",xlim=c(-0.06,0.06))
 
@@ -207,7 +208,6 @@ cali_plot <- ggplot(ATE.df.fnl, aes(tau.mean, ATE)) +        # ggplot2 plot with
   ) +
   scale_y_continuous(breaks=seq(-0.02,0.06,0.02))
 
-
 ggsave(file=paste0(Output, "Calibration_by_quartile_Causal_forest.png"), plot = cali_plot, width=8, height=4.94)
 
 cali_plot
@@ -216,7 +216,7 @@ cali_plot
 ### X Learner
 
 ```{r}
-# Implement the x learner on the testing data 
+## Implement the x learner on the testing data 
 tf0 = regression_forest(X_train[W_train==0,], Y_train[W_train==0], num.trees = 100)
 yhat0 = predict(tf0, X_train[W_train==1,])$predictions
 xf1 = regression_forest(X_train[W_train==1,], Y_train[W_train==1]-yhat0, num.trees = 100)
@@ -243,7 +243,7 @@ png(file=paste0(Output, "X_Learner_QINI.png"),width=595, height=545)
 plot(rate)
 print(rate)
 
-# Show the CATE distribution 
+## Show the CATE distribution 
 png(file=paste0(Output, "X_Learner_CATE.png"),width=595, height=368)
 hist(ehat, main = "", xlab = "CATE",xlim=c(-0.06,0.06))
 
@@ -288,7 +288,6 @@ cali_plot <- ggplot(ATE.df.fnl, aes(tau.mean, ATE)) +        # ggplot2 plot with
   ) +
   scale_y_continuous(breaks=seq(-0.02,0.06,0.02))
 
-
 ggsave(file=paste0(Output, "Calibration_by_quartile_X_learner.png"), plot = cali_plot, width=8, height=4.94)
 
 cali_plot
@@ -313,7 +312,7 @@ png(file=paste0(Output, "LM_forest_QINI_", suffix,".png"),width=595, height=545)
 plot(rate)
 print(rate)
 
-# Show the CATE distribution 
+## Show the CATE distribution 
 png(file=paste0(Output, "LM_forest_CATE_", suffix,".png"),width=595, height=368)
 hist(lm.tau.hat, main = "", xlab = "CATE",xlim=c(-0.4,0.4))
 
@@ -476,4 +475,5 @@ ggsave(file=paste0(Output, "HTE_by_income_LM_forest_",suffix,".png"), plot = plo
 sort(unique(data.test.drfboro$drf_boro))
 plot_drfboro <- HTE_plot(lm.tau.hat = lm.tau.hat.drfboro,data.test = data.test.drfboro,factor = "drf_boro", factor_label = c("Brooklyn", "Manhattan", "Queens", "Staten Island", "The Bronx"))
 ggsave(file=paste0(Output, "HTE_by_dropoff_LM_forest_",suffix,".png"), plot = plot_drfboro, width=8, height=8)
+
 ```
